add block footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,42 @@
 
     </main>
     <footer class="footer">
-     
+      <div class="footer__container">
+        <div>
+          <img src="./images/logo-white.svg" alt="">
+          <div class="footer__info">
+            <span>8 (499) 450-47-97</span>
+            <span>info@conquest.watch.ru</span>
+          </div>
+        </div>
+        <ul class="footer__nav">
+          <li>
+            <p class="footer__title">о компании</p>
+          </li>
+          <li><a class="footer__link" href="#">Наши магазины</a></li>
+          <li><a class="footer__link" href="#">Вакансии</a></li>
+          <li><a class="footer__link" href="#">Сертификаты</a></li>
+          <li><a class="footer__link" href="#">Отзывы</a></li>
+        </ul>
+        <ul class="footer__nav">
+          <li>
+            <p class="footer__title">покупателям</p>
+          </li>
+          <li><a class="footer__link" href="#">Каталог товаров</a></li>
+          <li><a class="footer__link" href="#">Как заказать?</a></li>
+          <li><a class="footer__link" href="#">FAQ</a></li>
+          <li><a class="footer__link" href="#">Корпоративным клиентам</a></li>
+        </ul>
+        <ul class="footer__nav">
+          <li>
+            <p class="footer__title">оплата и доставка</p>
+          </li>
+          <li><a class="footer__link" href="#">Способы оплаты</a></li>
+          <li><a class="footer__link" href="#">Время доставки</a></li>
+          <li><a class="footer__link" href="#">Гарантии и ремонт</a></li>
+          <li><a class="footer__link" href="#">Возврат и компенсация</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
