--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
       </div>
     </header>
     <main>
-
+      <section class="hero">
+        <img src="./images/elipse_main.png" alt="" class="hero__back">
+        <img src="./images/Group 2.svg" alt="" class="hero__price">
+        <img src="./images/diameter.svg" alt="" class="hero__diameter">
+        <img src="./images/Line.svg" alt="" class="hero__line">
+        <div class="hero__info">
+          <h1 class="hero__title">Весна/Лето 2019</h1>
+          <p class="hero__subtitle">Коллекция</p>
+          <p class="hero__description">Швейцарские часы в наличии в Москве и с доставкой по всему миру</p>
+          <button class="hero__button">Смотреть каталог</button>
+        </div>
+        <img src="./images/watch_main.png" alt="" class="hero__illustration">
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container">
