add block catalog

--- a/index.html
+++ b/index.html
@@ -43,6 +43,41 @@
         </div>
         <img src="./images/watch_main.png" alt="" class="hero__illustration">
       </section>
+      <section class="catalog">
+        <div class="catalog__container">
+          <h2 class="catalog__title">Популярные модели</h2>
+          <a class="catalog__link">Смотреть все</a>
+          <div class="catalog__block">
+            <div class="catalog__card">
+              <h3 class="catalog__name">RADO</h3>
+              <p class="catalog__price">65 300 <img src="./images/ruble.svg"></p>
+              <img src="./images/watch1.png">
+              <div class="catalog__about">
+                <img src="./images/Line.svg">
+                <a class="catalog__about-link" href="#">Подробнее</a>
+              </div>
+            </div>
+            <div class="catalog__card">
+              <h3 class="catalog__name">BVLGARI</h3>
+              <p class="catalog__price">81 700 <img src="./images/ruble.svg"></p>
+              <img src="./images/watch2.png">
+              <div class="catalog__about">
+                <img src="./images/Line.svg">
+                <a class="catalog__about-link" href="#">Подробнее</a>
+              </div>
+            </div>
+            <div class="catalog__card">
+              <h3 class="catalog__name">BVLGARI</h3>
+              <p class="catalog__price">72 700 <img src="./images/ruble.svg"></p>
+              <img src="./images/watch3.png">
+              <div class="catalog__about">
+                <img src="./images/Line.svg">
+                <a class="catalog__about-link" href="#">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container">
