--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
           </div>
         </div>
       </section>
+      <section class="news">
+        <div class="news__container">
+          <div class="news__info">
+            <h2 class="news__title">Следите за нашими новостями</h2>
+            <p class="news__description">Подписывайтесь на <span class="news__description news__description_bold">@conquest_watch</span> в соцсетях и узнавайте о новинках и акциях первыми.</p>
+            <div class="news__social-icons">
+              <img src="./images/instagram_icon.svg">
+              <img src="./images/facebook_icon.svg">
+              <img src="./images/twitter_icon.svg">
+            </div>
+          </div>
+          <div class="news__illustrations">
+            <img src="./images/photo_1.jpg" class="news1">
+            <img src="./images/photo_2.jpg" class="news2">
+            <img src="./images/photo_3.jpg" class="news3">
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container">
