add block gallery

--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@
           </div>
         </div>
       </section>
+      <section class="gallery">
+        <div class="gallery__container">
+          <div class="gallery__image">
+            <div class="gallery__navigation">
+              <img src="./images/arrow_left.svg">
+              <p>01</p>
+              <img src="./images/arrow_right.svg">
+            </div>
+          </div>
+          <div class="gallery__info">
+            <h2 class="news__title">Подлинное качество</h2>
+            <p class="gallery__description">Все часы производятся в Швейцарии и имеют сертификаты качества. Настоящие швейцарские часы — это предмет гордости и престижа.</p>
+            <button class="gallery__button">смотреть каталог</button>
+          </div>
+        </div>
+      </section>
       <section class="news">
         <div class="news__container">
           <div class="news__info">
