add background for block gallery

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         </div>
       </section>
       <section class="gallery">
+        <img src="./images/lines_banner.png" class="gallery__lines">
+        <div class="gallery__back"></div>
         <div class="gallery__container">
           <div class="gallery__image">
             <div class="gallery__navigation">
