--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <img src="./images/logo.svg" alt="логотип">
       <ul class="header__nav">
         <li>
-          <p>Каталог</p>
+          <a href="" class="header__link">Каталог</a>
         </li>
         <li>
-          <p>Акции</p>
+          <a href=""  class="header__link">Акции</a>
         </li>
         <li>
-          <p>Доставка</p>
+          <a href="" class="header__link">Доставка</a>
         </li>
         <li>
-          <p>Контакты</p>
+          <a href="" class="header__link">Контакты</a>
         </li>
       </ul>
       <div class="header__icons">
